--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.2",
     "next": "14.1.0",
     "react": "^18",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18",
     "sass": "^1.70.0"
   },
