--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-calendar": "^4.8.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.50.1",
     "sass": "^1.70.0"
   },
   "devDependencies": {
